--- a/Training/Data Structures.ipynb
+++ b/Training/Data Structures.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "140225e4",
    "metadata": {},
    "outputs": [
@@ -43,8 +43,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d5e8d13d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Jane Smith', 32)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Indexing Tuples\n",
+    "cust_info2[1]\n",
+    "## Slicing Tuples\n",
+    "cust_info2[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9c124d81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('CUST002', 'Jane Smith', 32, 'CUST003', 'Alice Johnson', 25)\n",
+      "('CUST002', 'Jane Smith', 32, 'CUST003', 'Alice Johnson', 25, 'CUST004', 'Bob Brown', 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Tuple Concattenation\n",
+    "\n",
+    "cust_info3 = (\"CUST003\", \"Alice Johnson\", 25)\n",
+    "all_cust = cust_info2 + cust_info3\n",
+    "print(all_cust)\n",
+    "\n",
+    "cust_info4 = cust_info2 + cust_info3 + (\"CUST004\", \"Bob Brown\", 30)\n",
+    "print(cust_info4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9c46a513",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Min and Max Functions will not work with tuples having mixed data types\n",
+    "exmp_tuple = (\"a\", \"vb\")\n",
+    "max(exmp_tuple) ## will be 'vb' as it is lexicographically higher than 'a'\n",
+    "\n",
+    "exmp_tupl2 = (1,100,110)\n",
+    "max(exmp_tupl2) ## will be 110"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "56e61b29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Hello', 'My Name is', 'Felix Kurniawan Dharma')\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Immutability\n",
+    "## In fact tuples cannot directly be changed the value of elements we can slice it and store to the new value\n",
+    "\n",
+    "exp_tuple = (\"Hello\", \"My Name is\", 12, 13, \"Felix Kurniawan Dharma\")\n",
+    "var_slice1 = exp_tuple[0:2]\n",
+    "var_slice2 = exp_tuple[4]\n",
+    "\n",
+    "# new_tuple = var_slice1 + var_slice2\n",
+    "new_tuple = exp_tuple[0:2] + (var_slice2,)\n",
+    "print(new_tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b89d5ac8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 5, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sorting Tuples\n",
+    "\n",
+    "tuple1 = (5,3,8,1,2)\n",
+    "sorted_tuple = tuple(sorted(tuple1))\n",
+    "print(sorted_tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52416e67",
    "metadata": {},
    "outputs": [],
    "source": []
