--- a/Training/Data Structures.ipynb
+++ b/Training/Data Structures.ipynb
@@ -171,8 +171,152 @@
    "execution_count": null,
    "id": "52416e67",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\" Sets = Unordered collection of unique items and mixed data types\n",
+    " start with curly braces {}\n",
+    " Mutable\n",
+    " cannot have duplicate values\n",
+    " No indexing and slicing \"\"\" \n",
+    "\n",
+    "list1 = [1,2,2,2,2,3,4,5,6,6,6,7,8,8,8]\n",
+    "set1 = set(list1)\n",
+    "len(set1)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "575926de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 4, 5, 6, 7, 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1.remove(3)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "72f203fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 4, 5, 6, 7, 8, 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1.add(10)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "14e9170a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\" Sets Operatrions\n",
+    "Union = Combination of all unique elements from both sets\n",
+    "Intersection = Elements that are common in both sets\n",
+    "Symmetric Difference = Elements that are in either setA or setB but not in both\n",
+    " \"\"\" \n",
+    "\n",
+    "setA = {1,2,3,4,5}\n",
+    "setB = {4,5,6,7,8}\n",
+    "set_union = setA.union(setB)\n",
+    "print(set_union)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "164af245",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 6, 7, 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "setC = setA.symmetric_difference(setB)\n",
+    "print(setC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "6ebadd60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_intersection = setA.intersection(setB)\n",
+    "print(set_intersection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "23b0e534",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 5, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_a = [5,1,3,4,4,5,6,7]\n",
+    "list_b = [3,3,5,5,1,7,2]\n",
+    "\n",
+    "new_set = set(list_a).intersection(set(list_b))\n",
+    "print(new_set)"
+   ]
   }
  ],
  "metadata": {
