--- a/Training/Data Structures.ipynb
+++ b/Training/Data Structures.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "23b0e534",
    "metadata": {},
    "outputs": [
@@ -317,6 +317,92 @@
     "new_set = set(list_a).intersection(set(list_b))\n",
     "print(new_set)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "1c62fe42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'customerid': 'CUST001', 'name': 'Felix Kurniawan', 'age': 28}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Dictionarys = Key-Value Pairs\n",
+    "# Key should be unique and immutable\n",
+    "# Values can be of any data type and can be duplicated\n",
+    "\n",
+    "cust_dic = {\"customerid\" : \"CUST001\",\n",
+    "            \"name\" : \"John Doe\",\n",
+    "            \"age\" : 28,}\n",
+    "cust_dic[\"name\"] = \"Felix Kurniawan\"\n",
+    "print(cust_dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "0d2e375e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cust_dic[\"email\"] = \"test@gmail.com\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "1a0d04f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['CUST001', 'Felix Kurniawan', 28, 'test@gmail.com'])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cust_dic.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "defa0a04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['customerid', 'name', 'age', 'email'])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cust_dic.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "029d393c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
