Delete all Outputs

--- a/Training/Utility Functions.ipynb
+++ b/Training/Utility Functions.ipynb
@@ -2,29 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "57f3f566",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[615.7521601035994, 1385.4423602330987, 2463.0086404143976]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     " ## Map, Reduce, and Filter Functions\n",
     "\n",
-    "# Area of a circle\n",
     "# Map takes 2 arguments first is a function and second is an iterable\n",
+    "# map(function, iterable)\n",
     "\n",
     "import math\n",
     "\n",
+    "# Area of a circle\n",
     "radii = [14,21,28]\n",
     "area = []\n",
     "\n",
@@ -45,24 +35,7 @@
    "execution_count": null,
    "id": "4113e7eb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Berlin', 84.2),\n",
-       " ('Cairo', 96.8),\n",
-       " ('Buenos Aires', 66.2),\n",
-       " ('Los Angeles', 78.80000000000001),\n",
-       " ('Tokyo', 80.6),\n",
-       " ('New York', 82.4),\n",
-       " ('Lagos', 91.4)]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert Celcius scale to Farheneit\n",
     "\n",
@@ -73,6 +46,25 @@
     "cel_to_far = list(map(lambda data: (data[0], (9/5)*data[1] + 32), temps))\n",
     "cel_to_far"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "522af42e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter Function\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87c10360",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
