Update Utility Function

--- a/Training/Utility Functions.ipynb
+++ b/Training/Utility Functions.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "57f3f566",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[615.7521601035994, 1385.4423602330987, 2463.0086404143976]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     " ## Map, Reduce, and Filter Functions\n",
     "\n",
@@ -32,10 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4113e7eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Berlin', 84.2),\n",
+       " ('Cairo', 96.8),\n",
+       " ('Buenos Aires', 66.2),\n",
+       " ('Los Angeles', 78.80000000000001),\n",
+       " ('Tokyo', 80.6),\n",
+       " ('New York', 82.4),\n",
+       " ('Lagos', 91.4)]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert Celcius scale to Farheneit\n",
     "\n",
@@ -49,13 +77,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "522af42e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['felix', 'kurniawan']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Filter Function\n",
-    "\n"
+    "\n",
+    "import statistics\n",
+    "\n",
+    "# .mean() function to calculate the mean of a list\n",
+    "data = [1,3,5,7,8,12,11,13]\n",
+    "\n",
+    "avg = statistics.mean(data)\n",
+    "print(avg)\n",
+    "\n",
+    "# filter list that value greater than the mean value\n",
+    "list(filter(lambda x: x > avg, data))\n",
+    "\n",
+    "#filtering values that contain default value\n",
+    "\n",
+    "data2 = [\"felix\", 0, 0.0, \"kurniawan\", \"\"]\n",
+    "list(filter(None, data2))"
    ]
   },
   {
@@ -64,7 +125,9 @@
    "id": "87c10360",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Reduce Function\n"
+   ]
   }
  ],
  "metadata": {
@@ -83,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
