--- a/Training/Data Types.ipynb
+++ b/Training/Data Types.ipynb
@@ -14,10 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fbc218aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, 12\n"
+     ]
+    }
+   ],
    "source": [
     "#Input and Output Example\n",
     "name = input(\"Enter your name: \")\n",
@@ -96,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
