--- a/Training/Pandas.ipynb
+++ b/Training/Pandas.ipynb
@@ -17,12 +17,40 @@
     "\n",
     "df or any alias => you can see your all dataset. you can get your total rows and total columns\n",
     "\n",
-    "df.info() => to get column data types and null data"
+    "df.info() => to get column data types and null data\n",
+    "\n",
+    "df.describe() => get a characteristics data frame\n",
+    "\n",
+    "df.columns() => get all your columns in data frame\n",
+    "\n",
+    "df.T => Transpose matrix column into row, row into column\n",
+    "\n",
+    "df.sort_values() => sort value based on column you want\n",
+    "\n",
+    "df[new column] = df[old column] => it creates a new column\n",
+    "\n",
+    "df[x:y] => it will get a row data from x in y\n",
+    "\n",
+    "df[x column with operator] => it can filter the column based on condition created\n",
+    "\n",
+    "df.fillna => it will assign a value to a null value\n",
+    "\n",
+    "df.pop() => will delete a selected column\n",
+    "\n",
+    "df[column].dropna => drop null value in column\n",
+    "\n",
+    "df.concat([df1,df2]) => will concat a dataframe\n",
+    "\n",
+    "pd.merge(df1, df2, what a commmon column, how(join) = 'inner, left, right, outer')\n",
+    "\n",
+    "loc => gets rows(and/or columns) with particular labels\n",
+    "\n",
+    "iloc => gets rows(and/or columns) with integer locations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "cdd085b7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "c4c415c7",
    "metadata": {},
    "outputs": [],
@@ -46,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "db1f79e8",
    "metadata": {},
    "outputs": [
@@ -88,8 +116,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "f6990b8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0             2\n",
+       "1             8\n",
+       "2            26\n",
+       "3            30\n",
+       "4            32\n",
+       "          ...  \n",
+       "27896    140685\n",
+       "27897    140686\n",
+       "27898    140689\n",
+       "27899    140690\n",
+       "27900    140699\n",
+       "Name: id, Length: 27901, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.pop('id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c6d1f6d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 27901 entries, 0 to 27900\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column                                 Non-Null Count  Dtype  \n",
+      "---  ------                                 --------------  -----  \n",
+      " 0   Gender                                 27901 non-null  object \n",
+      " 1   Age                                    27901 non-null  float64\n",
+      " 2   City                                   27901 non-null  object \n",
+      " 3   Profession                             27901 non-null  object \n",
+      " 4   Academic Pressure                      27901 non-null  float64\n",
+      " 5   Work Pressure                          27901 non-null  float64\n",
+      " 6   CGPA                                   27901 non-null  float64\n",
+      " 7   Study Satisfaction                     27901 non-null  float64\n",
+      " 8   Job Satisfaction                       27901 non-null  float64\n",
+      " 9   Sleep Duration                         27901 non-null  object \n",
+      " 10  Dietary Habits                         27901 non-null  object \n",
+      " 11  Degree                                 27901 non-null  object \n",
+      " 12  Have you ever had suicidal thoughts ?  27901 non-null  object \n",
+      " 13  Work/Study Hours                       27901 non-null  float64\n",
+      " 14  Financial Stress                       27901 non-null  object \n",
+      " 15  Family History of Mental Illness       27901 non-null  object \n",
+      " 16  Depression                             27901 non-null  int64  \n",
+      "dtypes: float64(7), int64(1), object(9)\n",
+      "memory usage: 3.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_df_without_id = df\n",
+    "new_df_without_id.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dc18152d",
+   "id": "f666b5e9",
    "metadata": {},
    "outputs": [],
    "source": []
